
Regina - A Normal Surface Theory Calculator

    This file gives a detailed list of changes between releases,
    including all changes to the C++/Python API.

    For just the key highlights, see the (far more readable) file
    HIGHLIGHTS.txt.

Version 7.2  [ (to be determined) ]

    PYTHON:
        - Updated the included pybind11 library from 2.8.1 to 2.10.0.
          This means we can now support Python 3.11, but no longer support
          Python 3.4 or 3.5.
    USER INTERFACE:
        - Fixed a deadlock that occurs in the Windows GUI when opening two
          Python consoles in quick succession (e.g., by a double-click).

Version 7.1  [ 30 September, 2022 ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
        - The GUI can now build against either Qt5 or Qt6.
        - Updated the bundled copy of Normaliz to version 3.9.3 (20 Apr 2022).
        - Removed all code that was deprecated in or before version 7.0.
        - Many native integer types (e.g., int, unsigned, long) have been
          changed, reflecting more natural and/or consistent choices.
          In particular, the types used for indices, sizes and/or lengths
          now more consistently use size_t (or ssize_t when needed), and
          the types used for "small" integers now more consistently use int
          instead of unsigned.  Note in particular that some types have
          changed from signed to unsigned, and vice versa.
    ENGINE:
        Class AbelianGroup:
            - New tightDecoding() routines.
        Class AngleStructures:
            - New operator [], which is identical to calling structure().
        Class BanEdge:
            - New ban constraint for use with the tree traversal classes.
        Class CallableArg<...>:
            - Now a public helper class in the main regina:: namespace.
            - Now behaves gracefully if the given index is out of range.
        Class Cut: