@@ -9,6 +9,9 @@ Regina - A Normal Surface Theory Calculator
 
 Version 7.2  [ (to be determined) ]
 
+    ENGINE:
+        Class ListView<...>:
+            - Added equality operators (== and !=).
     PYTHON:
         - Updated the included pybind11 library from 2.8.1 to 2.10.0.
           This means we can now support Python 3.11, but no longer support
